[workspace]
members = [
    "app",
    "stonfi_client",
]
resolver = "2"

[workspace.package]
version = "0.0.0-dev"
edition = "2021"
description = "tondefender backend"
repository = "https://github.com/tondefender"

[workspace.dependencies]
anyhow.version = "1.0.44"
serde = { version="1", features = ["derive"] }
serde_json = "1"
tokio = { version="1.40", features = ["full"] }
tokio-test = "0.4.4"
reqwest = {version = "0.12.8"}
log = "0.4"
env_logger = "0.11.5"
axum = "0.7"
tonlib-core = "0.19.2"
tower-http = { version = "0.6.1", features = ["cors"] }


# internal deps
stonfi_client = { path = "stonfi_client" }
