[package]
name = "app"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
stonfi_client.workspace = true
tokio.workspace = true
serde_json.workspace = true
axum.workspace = true
serde.workspace = true
log.workspace = true
env_logger.workspace = true